# Teste_AB

./: Dockerfile.webscraper  README.md  pyproject.toml  requirements.txt
dataset/: data_experiment.csv
mab/: eps_greedy_agent.py  greedy_agent.py  omniscient_agent.py  random_agent.py  thompson_agent.py
notebooks/: abn_notebook.ipynb  design_de_experimentos.ipynb  notebook.ipynb
pa_bayesion/: analytics.py  app.py  visitor_control.py  visitor_treatment.py  webpage_control.py  webpage_treatment.py
pa_bayesion/templates/: pg_layout_blue.html  pg_layout_red.html
streamlit/: analytics_bayesian.py  requirements.txt  sidebar.py  streamlit_analytics_bayesian.py
web/: analytics_bayesian.py  app.py  requirements.txt  thompson_agent.py  variante.py  webscraper.py
web/infra/configs/: connection.py
web/infra/entities/: experimento.py
web/infra/repository/: experimento_repository.py
web/templates/: pg_layout_blue.html  pg_layout_red.html
webscraper/: requirements.txt  visitor.py  webscraper.py
