[project]
name = "projeto-teste-ab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "selenium>=4.31.0",
    "statsmodels>=0.14.4",
    "webdriver-manager>=4.0.2",
]
